# ontology-query

./: .gitignore  README.md  pyproject.toml
examples/: p2p_behavior_effects_minimal.yaml
src/ontology_query/: __init__.py  cli.py  datalog_engine.py  model_loader.py  nlq.py  ontology.py
src/ontology_query.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
